# LinuxDevelopment2024

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  const.c  fun.c  outlib.h  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  gdb_script_1  gdb_script_2  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: Makefile.am  ru.po
08_I18n/src/: Makefile.am  prog.c
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  prog.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  libvector.c  vector.c  vector.h
10_LibTesting/tests/: Makefile.am  dummy.ts  upstream.ts
11_Documenting/: Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: prog.c
